# heisenbridge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  appservice.py  channelroom.py  controlroom.py  docker-compose.yml  main.py  matrix.py  networkroom.py  privateroom.py  pyproject.toml  requirements.txt  room.py  setup.cfg  setup.py
.github/workflows/: build-and-test.yml  docker.yaml  source-package.yml
docker/: element-config.json  heisenbridge-init.sh
docker-compose/: README.md  docker-compose.yml
docker-compose/init/: heisenbridge-init.sh  synapse-init.sh
heisenbridge/: __init__.py  __main__.py  appservice.py  channel_room.py  command_parse.py  control_room.py  event_queue.py  future_queue.py  hidden_room.py  identd.py  irc.py  matrix.py  network_room.py  parser.py  plumbed_room.py  private_room.py  room.py  space_room.py  version.py  websocket.py
synapse-data/: reg.yaml
tests/: test_import.py  test_pills.py
unnamed_irc_bridge/: __init__.py  __main__.py  appservice.py  channel_room.py  command_parse.py  control_room.py  network_room.py  private_room.py  room.py
