[metadata]
name = heisenbridge
description = a bouncer-style Matrix IRC bridge
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hifi/heisenbridge
author = Toni Spets (hifi)
author_email = toni.spets@iki.fi
license = MIT license
license_file = LICENSE

[options]
packages =
    heisenbridge
install_requires =
  aiohttp >=3.6, <3.8
  irc >=19.0.0, <20.0
  pyyaml >=5.3, <5.5
  mautrix >=0.10.5, <0.11

python_requires = >=3.7

[options.entry_points]
console_scripts =
    heisenbridge = heisenbridge.__main__:main

[options.extras_require]
dev =
    mypy
    flake8
    black
    reorder-python-imports
    pre-commit

test =
    pytest

[flake8]
max-line-length = 132
extend-ignore = E203
