[metadata]
name = heisenbridge
description = a bouncer-style Matrix IRC bridge
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hifi/heisenbridge
author = Toni Spets (hifi)
author_email = toni.spets@iki.fi
license = MIT license
license_file = LICENSE

[options]
packages =
    heisenbridge
install_requires =
  irc >=19.0.0, <20.0
  ruamel.yaml >=0.15.35, <0.18
  mautrix >=0.14.0, <0.15
  python-socks[asyncio] >= 1.2.4

python_requires = >=3.8

[options.entry_points]
console_scripts =
    heisenbridge = heisenbridge.__main__:main

[options.extras_require]
dev =
    mypy
    flake8
    black
    reorder-python-imports
    pre-commit

test =
    pytest

[flake8]
max-line-length = 132
extend-ignore = E203
