[metadata]
name = heisenbridge
description = a bouncer-style Matrix IRC bridge
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hifi/heisenbridge
author = Toni Spets (hifi)
author_email = toni.spets@iki.fi
license = MIT license
license_file = LICENSE

[options]
packages =
    heisenbridge
install_requires =
  irc >=19.0.0, <20.4
  ruamel.yaml >=0.15.35, <0.19
  mautrix >=0.20.5, <0.21
  python-socks[asyncio] >= 1.2.4
  aiohttp >=3.8.0, <4.0.0

python_requires = >=3.10

[options.entry_points]
console_scripts =
    heisenbridge = heisenbridge.__main__:main

[options.extras_require]
dev =
    mypy
    flake8
    black >= 22.3.0
    reorder-python-imports
    pre-commit
    setuptools

test =
    pytest

[flake8]
max-line-length = 132
extend-ignore = E203, E721
